--- a/0_vs/PR210_3DEngine.vcxproj.filters
+++ b/0_vs/PR210_3DEngine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Source\Private\DirectXRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Private\DirectX10Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Public\Resource.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Public\DirectXRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Public\DirectX10Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
