~ Unified types for DX10 and DX11

--- a/0_vs/PR210_3DEngine.vcxproj.filters
+++ b/0_vs/PR210_3DEngine.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="Source\Public\DirectX10Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Public\DXTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\App.ico">
