--- a/0_vs/PR210_3DEngine.vcxproj
+++ b/0_vs/PR210_3DEngine.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="Resources\Resources\MainResources.h" />
     <ClInclude Include="Source\Public\DirectX10Renderer.h" />
     <ClInclude Include="Source\Public\DirectXRenderer.h" />
+    <ClInclude Include="Source\Public\DXTypes.h" />
     <ClInclude Include="Source\Public\Resource.h" />
     <ClInclude Include="Source\Public\stdafx.h" />
     <ClInclude Include="Source\Public\targetver.h" />
@@ -66,6 +67,7 @@
     <Import Project="Properties\Intermediate.props" />
     <Import Project="Properties\Build.props" />
     <Import Project="Properties\DirectX_x86.props" />
+    <Import Project="Properties\WindowsSDK.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -73,6 +75,7 @@
     <Import Project="Properties\Intermediate.props" />
     <Import Project="Properties\Build.props" />
     <Import Project="Properties\DirectX_x86.props" />
+    <Import Project="Properties\WindowsSDK.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
