~ Moved static libraries to dynamic libraries

--- a/0_vs/Projects/Application/Application.vcxproj
+++ b/0_vs/Projects/Application/Application.vcxproj
@@ -38,14 +38,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\Properties\PublicHeader.props" />
     <Import Project="..\..\Properties\Intermediate.props" />
-    <Import Project="..\..\Properties\Build.props" />
+    <Import Project="..\Framework.Core\Properties\Build.props" />
     <Import Project="..\Framework.Core\Properties\Framework.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\Properties\PublicHeader.props" />
     <Import Project="..\..\Properties\Intermediate.props" />
-    <Import Project="..\..\Properties\Build.props" />
+    <Import Project="..\Framework.Core\Properties\Build.props" />
     <Import Project="..\Framework.Core\Properties\Framework.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
