--- a/0_vs/Projects/Framework.Core/Framework.Core.vcxproj
+++ b/0_vs/Projects/Framework.Core/Framework.Core.vcxproj
@@ -11,10 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Private\Renderer.cpp" />
+    <ClCompile Include="Source\Private\IRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\Public\Renderer.h" />
+    <ClInclude Include="Source\Public\IRenderer.h" />
     <ClInclude Include="Source\Public\RendererTypes.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
