--- a/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj.filters
+++ b/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -23,5 +23,10 @@
     <ClInclude Include="Source\Public\DX10Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Definitions.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
