--- a/0_vs/Projects/Framework.Renderer.DX11Renderer/Framework.Renderer.DX11Renderer.vcxproj.filters
+++ b/0_vs/Projects/Framework.Renderer.DX11Renderer/Framework.Renderer.DX11Renderer.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Definitions.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
