--- a/0_vs/Projects/Game/Game.vcxproj
+++ b/0_vs/Projects/Game/Game.vcxproj
@@ -11,16 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\Private\Application.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Source\Public\Application.h" />
-    <ClInclude Include="Source\Public\IGame.h" />
+    <ClCompile Include="Source\Private\main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{F07545FA-0EA8-4FD5-AC7E-8789E7634EA3}</ProjectGuid>
-    <RootNamespace>Application</RootNamespace>
-    <ProjectName>Framework.Application</ProjectName>
+    <ProjectGuid>{D9E988AF-72AA-40AB-9144-47A4DF61D282}</ProjectGuid>
+    <RootNamespace>Game</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -30,7 +25,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>Game</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
