--- a/0_vs/Projects/Framework.Core/Framework.Core.vcxproj.filters
+++ b/0_vs/Projects/Framework.Core/Framework.Core.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Source\Public\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Public\Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Private\IRenderer.cpp">
