--- a/0_vs/Projects/Framework.Renderer.DX11Renderer/Framework.Renderer.DX11Renderer.vcxproj
+++ b/0_vs/Projects/Framework.Renderer.DX11Renderer/Framework.Renderer.DX11Renderer.vcxproj
@@ -48,6 +48,7 @@
     <Import Project="..\..\Properties\DirectX_x86.props" />
     <Import Project="..\..\Properties\WindowsSDK.props" />
     <Import Project="..\Framework.Core\Properties\Framework.props" />
+    <Import Project="..\Framework.Core\Properties\Framework_Debug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
