--- a/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj.filters
+++ b/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj.filters
@@ -28,5 +28,6 @@
     <None Include="Resources\Definitions.def">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="Resources\Shader\Shaders.shader" />
   </ItemGroup>
 </Project>
