--- a/0_vs/Projects/Framework.Core/Framework.Core.vcxproj.filters
+++ b/0_vs/Projects/Framework.Core/Framework.Core.vcxproj.filters
@@ -39,4 +39,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Shader\Shaders.shader" />
+  </ItemGroup>
 </Project>
