--- a/0_vs/Projects/Framework.Core/Framework.Core.vcxproj
+++ b/0_vs/Projects/Framework.Core/Framework.Core.vcxproj
@@ -40,7 +40,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <WholeProgramOptimization>false</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -60,6 +60,7 @@
     <Import Project="..\..\Properties\Intermediate.props" />
     <Import Project="..\..\Properties\Build.props" />
     <Import Project="..\..\Properties\WindowsSDK.props" />
+    <Import Project="..\..\Properties\tmp.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
