--- a/0_vs/Projects/PR210_3DEngine/PR210_3DEngine.vcxproj
+++ b/0_vs/Projects/PR210_3DEngine/PR210_3DEngine.vcxproj
@@ -75,6 +75,7 @@
     <Import Project="..\..\Properties\Build.props" />
     <Import Project="..\..\Properties\DirectX_x86.props" />
     <Import Project="..\..\Properties\WindowsSDK.props" />
+    <Import Project="..\..\Properties\tmp.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
