- Removed dllspec() from Framework.Renderer.DX11Renderer (using Definitions-file instead)

--- a/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj
+++ b/0_vs/Projects/Framework.Renderer.DX10Renderer/Framework.Renderer.DX10Renderer.vcxproj
@@ -49,7 +49,6 @@
     <Import Project="..\..\Properties\DirectX_x86.props" />
     <Import Project="..\..\Properties\WindowsSDK.props" />
     <Import Project="..\Framework.Core\Properties\Framework.props" />
-    <Import Project="..\Framework.Core\Properties\Framework_Debug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -90,6 +89,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Windows</SubSystem>
+      <ModuleDefinitionFile>Resources/Definitions.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
